syntax = "proto3";

package prototype;

option go_package = "github.com/coschain/contentos-go/prototype";

import "prototype/type.proto";


message account_create_operation{
    coin fee = 1;
    account_name creator = 2;
    account_name new_account_name = 3;
    authority owner = 4;
    authority active = 5;
    authority posting = 6;
    public_key_type memo_key = 7;
    string json_metadata = 8;
}

message transfer_operation{
    account_name from = 1;
    account_name to = 2;
    coin amount = 3;
    string memo = 4;
}

message transfer_to_vesting_operation{
    account_name from = 1;
    account_name to = 2;
    coin amount = 3;
}

message vote_operation{
    account_name voter = 1;
    uint64 idx = 3;
}

message bp_register_operation{
    account_name owner = 1;
    string url = 2;
    string desc = 3;
    public_key_type block_signing_key = 4;
    chain_properties  props = 5;
}

message bp_unregister_operation{
    account_name owner = 1;
}

message bp_vote_operation{
    account_name voter = 1;
    account_name witness = 2;
    bool cancel = 3;
}

message follow_operation{
    account_name follower = 1;
    account_name following = 2;
    bool cancel = 3;
}


message beneficiary_route_type{
    account_name    name    = 1;
    uint32          weight  = 2;
}


message post_operation{
    string uuid             = 1;
    account_name owner      = 2;
    string title            = 3;
    string content          = 4;
    repeated string tags    = 5;
    repeated beneficiary_route_type beneficiaries = 6;
}

message replay_operation{
    string uuid             = 1;
    account_name owner      = 2;
    string content          = 3;
    string parent_uuid      = 4;
    repeated beneficiary_route_type beneficiaries = 6;
}

